--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
             </button>
           </div>
         </div>
+        </div>
       </div>
     </div>
 
@@ -120,11 +121,62 @@
           <div class="col-6"></div>
         </div>
       </div>
+      </div>
+      </div>
     </div>
 
     <!--Features 4-->
+    <div class="feature4_bg">  
+      <p> My name </p>
+    </div>
 
     <!--Features 5-->
+    <div class="feature5_bg"> 
+      <div class=feature5>
+        <div class="d-flex w-50 mx-auto justify-content-center">
+          <img src="./assets/skull.png" class="rounded-pill">
+        </div>
+        <div class="d-flex w-50 align-items-start text-white" class="feature5_text;">
+          <div class="container">
+            <div class="row align-items-start">
+              <div class="col-12" style="font-size:20px;">
+                Want to stay in <br>touch?
+              </div>
+            <div class="row align-items-center">
+              <div class="col-12 text-uppercase text-wrap" style="font-size:60px;margin-top: 20px;">
+                Newsletter Subscribe
+              </div>
+            <div class="row align-items-end" style="margin-top: 20px;">
+              <div class="col-12 text-wrap">
+                In order to start receiving our news, all you have to do is enter your email address. 
+                Everything else will be taken care by us.
+                We will send you emails containing information about game. We don't spam.
+              </div>
+            </div>
+            </div>
+            </div>
+
+            <div class="row g-0" style="margin-top: 50px;">
+              <div class="col-4">
+                <div class="form-floating">
+                  <input type="email" class="form-control bg-dark text-warning" id="floatingInputGrid" placeholder="name@example.com" value="youremail@binar.co.id">
+                  <label for="floatingInputGrid" class="text white">Input with value</label>
+                </div>
+              </div>
+              <div class="col-4">
+                <div class="form-floating">
+                  <input type="button" class="btn btn-warning btn-lg fw-bold" style="margin-top: 5px; margin-left: 30px;" type="button" value="Subscribe Now">
+                </div>
+              </div>
+            </div>                    
+          </div>
+        </div>
+      </div>
+
+    <!--Bottom Navigation Bar-->
+
+
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
   </body>
