--- a/index.html
+++ b/index.html
@@ -17,26 +17,25 @@
     <div class="mainscreen_bg">
 
     <!--Navigation Bar-->
-      <div class="navigation">
-      <div class="divider"></div>
+      <nav class="navtop">
         <div class="container">
-        <header class="d-flex flex-wrap py-3">
+        <header class="d-flex flex-wrap">
           <ul class="nav col-2 justify-content-start">
-            <li><a href="#" class="nav-link px-2 link-light fw-bold text-uppercase fs-5">Logo</a></li>
+            <li><a href="#" class="nav-link px-2 link-light fw-bold text-uppercase fs-5" id="font-open">Logo</a></li>
           </ul>
           <ul class="nav col-7 justify-content-center">
-            <li><a href="#" class="nav-link px-2 link-light">Home</a></li>
-            <li><a href="#" class="nav-link px-2 link-light">Work</a></li>
-            <li><a href="#" class="nav-link px-2 link-light">Contact</a></li>
-            <li><a href="#" class="nav-link px-2 link-light">About Me</a></li>
+            <li><a href="#" class="nav-link px-2 link-light text-uppercase" id="font-open">Home</a></li>
+            <li><a href="https://github.com/radarbandung/challenge-chapter-3/" class="nav-link px-2 link-light text-uppercase" id="font-open">Work</a></li>
+            <li><a href="https://www.linkedin.com/in/ahmadmuzakisyafii" class="nav-link px-2 link-light text-uppercase" id="font-open">Contact</a></li>
+            <li><a href="https://www.linkedin.com/in/ahmadmuzakisyafii" class="nav-link px-2 link-light text-uppercase" id="font-open">About Me</a></li>
           </ul>
         <div class="nav col-3 justify-content-end">
-          <button type="button" class="btn btn-transparent text-light me-2">Sign Up</button>
-          <button type="button" class="btn btn-transparent text-light">Login</button>
+          <button type="button" class="btn btn-transparent text-light me-2 text-uppercase" id="font-open">Sign Up</button>
+          <button type="button" class="btn btn-transparent text-light text-uppercase" id="font-open">Login</button>
         </div>
         </div>
         </header>
-      </div>
+      </nav>
 
     <!--Main Title-->
       <div class="mainscreen">
@@ -44,13 +43,13 @@
         <div class="home-subtitle"><h2>Experience new traditional game play</h2></div>
         <div class="home-button"><button type="button" class="btn btn-warning">Play now</button></div>
         <div class="home-story"><p>The Story</p></div>
-        <img src="./assets/scroll-down.svg" class="bg-transparent">
+        <img src="./assets/scroll-down.svg" class="bg-transparent" a href="feature1">
       </div>
     </div>
 
     <!--Features 1-->
     <div class="feature1_bg">
-      <div class="feature1">
+      <div class="feature1" id="about">
         <div style="display: flex">
           <div class="feature1_text1">What's so special?</div>
         </div>
@@ -87,7 +86,7 @@
     <!--Features 2-->
     <div class="feature2_bg">
       <div class="d-flex flex-wrap justify-content-center">
-      <div class="feature2">
+      <div class="feature2" id="gamesfeature">
         <div style="width: 50%">
         <div class="feature2_text1">What's so special?</div>
         <div class="feature2_text2">Features</div>
@@ -105,7 +104,7 @@
     <!--Features 3-->
     <div class="feature3_bg">   
       <div class="d-flex flex-wrap justify-content-center">
-        <div class="feature3"> 
+        <div class="feature3" id="requirements"> 
       <div class="container">
         <div class="row text-white">
           <div class="col-12" id="f3head">Can My Computer Run this game?</div>
@@ -159,13 +158,13 @@
             <div class="row g-0" style="margin-top: 50px;">
               <div class="col-4">
                 <div class="form-floating">
-                  <input type="email" class="form-control bg-dark text-warning" id="floatingInputGrid" placeholder="name@example.com" value="youremail@binar.co.id">
-                  <label for="floatingInputGrid" class="text white">Input with value</label>
+                  <input type="email" class="form-control bg-dark text-warning border-dark" id="floatingInputGrid" placeholder="name@example.com" value="youremail@binar.co.id">
+                  <label for="floatingInputGrid" class="text white">Your email address</label>
                 </div>
               </div>
               <div class="col-4">
                 <div class="form-floating">
-                  <input type="button" class="btn btn-warning btn-lg fw-bold" style="margin-top: 5px; margin-left: 30px;" type="button" value="Subscribe Now">
+                  <input type="button" class="btn btn-warning btn-lg fw-bold" style="margin-top: 5px; margin-left: 30px;" type="button" value="Subscribe now">
                 </div>
               </div>
             </div>                    
@@ -174,9 +173,46 @@
       </div>
 
     <!--Bottom Navigation Bar-->
+      <nav class="navigationbot">
+          <div class="container">
+          <div class="d-flex flex-wrap bg-black">
+            <ul class="nav col-9 justify-content-end mx-6 py-3 border-bottom border-white" style="--bs-border-opacity: .5;">
+              <li><a href="#" class="nav-link px-2 link-light text-uppercase"  id="font-open">Home</a></li>
+              <li><a href="#about" class="nav-link px-2 link-light text-uppercase" id="font-open">About</a></li>
+              <li><a href="#gamesfeature" class="nav-link px-2 link-light text-uppercase" id="font-open">Game Features</a></li>
+              <li><a href="#requirements" class="nav-link px-2 link-light text-uppercase" id="font-open">System Requirements</a></li>
+              <li><a href="#quotes" class="nav-link px-2 link-light text-uppercase" id="font-open">Quotes</a></li>
+            </ul>
+          <div class="nav col-3 justify-content-end py-3 align-content-center border-bottom border-white" style="--bs-border-opacity: .5;">
+            <li class="nav-item mx-4"><a href="https:facebook.com"><img src="./assets/facebook.svg"></a></li>
+            <li class="nav-item mx-4"><a href="https:twitter.com"><img src="./assets/twitter.svg"></a></li>
+            <li class="nav-item mx-4"><a href="https:youtube.com"><img src="./assets/vector.svg"></a></li>
+            <li class="nav-item mx-4"><a href="https:twitch.tv"><img src="./assets/twitch.svg"></a></li>
+          </div>
+          </div>
+          </div>
+      </nav>
 
-
+      <footer class="navigationbot">
+        <div class="container">
+        <div class="d-flex flex-wrap bg-black py-3">
+          <ul class="nav col-6 justify-content-start" id="font-open">
+            <p class="text-white-50 justify-content-start align-items-start"> © 2018 Your Games, Inc. All Rights Reserved</p>
+          </ul>
+          <ul class="nav col-6 justify-content-end">
+            <li class="nav-item nav-link link-light text-uppercase" id="font-open">Privacy Policy</li>
+            <li class="nav-item nav-link link-light" id="font-open">|</a></li>
+            <li class="nav-item nav-link link-light text-uppercase" id="font-open">Terms of Services</a></li>
+            <li class="nav-item nav-link link-light" id="font-open">|</a></li>
+            <li class="nav-item nav-link link-light text-uppercase" id="font-open">Code of Conduct</a></li>
+          </ul>
+        </div>
+        </div>
+      </footer>
+    
     </div>
+
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
   </body>
