--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="container">
         <header class="d-flex flex-wrap">
           <ul class="nav col-2 justify-content-start">
-            <li><a href="#" class="nav-link px-2 link-light fw-bold text-uppercase fs-5" id="font-open">Logo</a></li>
+            <li><a href="#" class="nav-link px-2 link-light fw-bold text-uppercase" style="font-size:1.302vw;" id="font-open">Logo</a></li>
           </ul>
           <ul class="nav col-7 justify-content-center">
             <li><a href="#" class="nav-link px-2 link-light text-uppercase" id="font-open">Home</a></li>
@@ -30,8 +30,8 @@
             <li><a href="https://www.linkedin.com/in/ahmadmuzakisyafii" class="nav-link px-2 link-light text-uppercase" id="font-open">About Me</a></li>
           </ul>
         <div class="nav col-3 justify-content-end">
-          <button type="button" class="btn btn-transparent text-light me-2 text-uppercase" id="font-open">Sign Up</button>
-          <button type="button" class="btn btn-transparent text-light text-uppercase" id="font-open">Login</button>
+          <button type="button" class="btn btn-transparent text-light me-2 text-uppercase" id="font-open" style="font-size:0.937vw;">Sign Up</button>
+          <button type="button" class="btn btn-transparent text-light text-uppercase" id="font-open" style="font-size:0.937vw;">Login</button>
         </div>
         </div>
         </header>
@@ -39,11 +39,11 @@
 
     <!--Main Title-->
       <div class="mainscreen">
-        <div class="home-title"><h1>PLAY TRADITIONAL GAME</h1></div>
-        <div class="home-subtitle"><h2>Experience new traditional game play</h2></div>
-        <div class="home-button"><button type="button" class="btn btn-warning">Play now</button></div>
-        <div class="home-story"><p>The Story</p></div>
-        <img src="./assets/scroll-down.svg" class="bg-transparent" a href="feature1">
+        <div class="main-title"><h1>PLAY TRADITIONAL GAME</h1></div>
+        <div class="main-subtitle"><h3>Experience new traditional game play</h3></div>
+        <div class="main-button"><button type="button" class="btn btn-warning" style="font-size: 1.041vw;">Play now</button></div>
+        <div class="main-story"><p>The Story</p></div>
+        <img src="./assets/scroll-down.svg" class="img-fluid bg-transparent">
       </div>
     </div>
 
@@ -91,10 +91,10 @@
         <div class="feature2_text1">What's so special?</div>
         <div class="feature2_text2">Features</div>
           <ul>
-            <li class="text-warning fs-4 text-uppercase" style="margin-top:70px">Traditional Games</li>
+            <li class="text-warning text-uppercase" style="margin-top:70px; font-size:2.083vw;">Traditional Games</li>
             <p style="margin-top:10px">If you miss your childhood, we provide <br>many traditional games here</p>
-            <li class="text-warning fs-4 text-uppercase" style="margin-top:70px">Game Suit</li>
-            <li class="text-warning fs-4 text-uppercase" style="margin-top:70px">TBD</li>           
+            <li class="text-warning text-uppercase" style="margin-top:70px; font-size:2.083vw;">Game Suit</li>
+            <li class="text-warning text-uppercase" style="margin-top:70px; font-size:2.083vw;">TBD</li>           
           </ul>
         </div>
       </div>
@@ -108,15 +108,15 @@
       <div class="container">
         <div class="row text-white">
           <div class="col-12" id="f3head">Can My Computer Run this game?</div>
-          <div class="col-6" id="f3req">System <br>Requirements</div>
+          <div class="col-6" id="f3req"><h2>System <br>Requirements</h2></div>
           <div class="col-6"></div>
-          <div class="col-3 border border-1 border-light"><h4>OS: </h4>Windows 7 64-bit only<br>(No OSX support at this time)</div>
-          <div class="col-3 border border-1 border-light"><h4>Processor:</h4>Intel Core 2 Duo @ 2.4 GHZ or <br>AMD Athlon X2 @ 2.8 GHZ</div>
+          <div class="col-3 border border-1 border-light"><h4>OS: </h4><h5>Windows 7 64-bit only<br>(No OSX support at this time)</h5></div>
+          <div class="col-3 border border-1 border-light"><h4>Processor:</h4><h5>Intel Core 2 Duo @ 2.4 GHZ or <br>AMD Athlon X2 @ 2.8 GHZ</h5></div>
           <div class="col-6"></div>
-          <div class="col-3 border border-1 border-light"><h4>Memory :</h4>4GB RAM</div>
-          <div class="col-3 border border-1 border-light"><h4>Storage:</h4>8GB available space</div>
+          <div class="col-3 border border-1 border-light"><h4>Memory :</h4><h5>4GB RAM</h5></div>
+          <div class="col-3 border border-1 border-light"><h4>Storage:</h4><h5>8GB available space</h5></div>
           <div class="col-6"></div>
-          <div class="col-6 border border-1 border-light"><h4>Graphics:</h4>NVIDIA GeForce GTX 660 2GB or <br>AMD Radeon HD 7850 2GB DirectX11 (Shader Model 5)</div>
+          <div class="col-6 border border-1 border-light"><h4>Graphics:</h4><h5>NVIDIA GeForce GTX 660 2GB or <br>AMD Radeon HD 7850 2GB DirectX11 (Shader Model 5)</h5></div>
           <div class="col-6"></div>
         </div>
       </div>
@@ -126,26 +126,38 @@
 
     <!--Features 4-->
     <div class="feature4_bg">  
-      <p> My name </p>
+        <div class="feature4" id="quotes">
+          <div style="display: flex">
+            <div class="feature4_text1">Top scores</div>
+          </div>
+          <div style="display: flex">
+            <div class="feature4_text2">This top score from various games provided on this platform</div>
+          </div>
+          <div class="feature4_button d-grid gap-2 col-3"><button type="button" class="btn btn-warning btn-lg fw-bold" style="font-size:1.302vw;">See more</button></div>
+    </div>
+
+    <!--Features 4 Card-->
+    <div>
+
     </div>
 
     <!--Features 5-->
     <div class="feature5_bg"> 
       <div class=feature5>
         <div class="d-flex w-50 mx-auto justify-content-center">
-          <img src="./assets/skull.png" class="rounded-pill">
+          <img src="./assets/skull.png" class="img-fluid rounded-pill">
         </div>
         <div class="d-flex w-50 align-items-start text-white" class="feature5_text;">
           <div class="container">
             <div class="row align-items-start">
-              <div class="col-12" style="font-size:20px;">
+              <div class="col-12" style="font-size: 1.562vw;">
                 Want to stay in <br>touch?
               </div>
             <div class="row align-items-center">
-              <div class="col-12 text-uppercase text-wrap" style="font-size:60px;margin-top: 20px;">
+              <div class="col-12 text-uppercase text-wrap" style="font-size: 3.125vw; margin-top: 20px;">
                 Newsletter Subscribe
               </div>
-            <div class="row align-items-end" style="margin-top: 20px;">
+            <div class="row align-items-end" style="font-size: 1.041vw; margin-top: 20px;">
               <div class="col-12 text-wrap">
                 In order to start receiving our news, all you have to do is enter your email address. 
                 Everything else will be taken care by us.
@@ -155,16 +167,17 @@
             </div>
             </div>
 
+    <!--Email & Subscribe-->
             <div class="row g-0" style="margin-top: 50px;">
               <div class="col-4">
                 <div class="form-floating">
                   <input type="email" class="form-control bg-dark text-warning border-dark" id="floatingInputGrid" placeholder="name@example.com" value="youremail@binar.co.id">
-                  <label for="floatingInputGrid" class="text white">Your email address</label>
+                  <label for="floatingInputGrid" class="text white" style="font-size: 1.302vw;">Your email address</label>
                 </div>
               </div>
               <div class="col-4">
                 <div class="form-floating">
-                  <input type="button" class="btn btn-warning btn-lg fw-bold" style="margin-top: 5px; margin-left: 30px;" type="button" value="Subscribe now">
+                  <input type="button" class="btn btn-warning btn-lg fw-bold" style="margin-top: 5px; margin-left: 30px; font-size: 1.302vw;" type="button" value="Subscribe now">
                 </div>
               </div>
             </div>                    
@@ -172,7 +185,7 @@
         </div>
       </div>
 
-    <!--Bottom Navigation Bar-->
+    <!--Bottom Navigation Bar & Footer-->
       <nav class="navigationbot">
           <div class="container">
           <div class="d-flex flex-wrap bg-black">
@@ -184,10 +197,10 @@
               <li><a href="#quotes" class="nav-link px-2 link-light text-uppercase" id="font-open">Quotes</a></li>
             </ul>
           <div class="nav col-3 justify-content-end py-3 align-content-center border-bottom border-white" style="--bs-border-opacity: .5;">
-            <li class="nav-item mx-4"><a href="https:facebook.com"><img src="./assets/facebook.svg"></a></li>
-            <li class="nav-item mx-4"><a href="https:twitter.com"><img src="./assets/twitter.svg"></a></li>
-            <li class="nav-item mx-4"><a href="https:youtube.com"><img src="./assets/vector.svg"></a></li>
-            <li class="nav-item mx-4"><a href="https:twitch.tv"><img src="./assets/twitch.svg"></a></li>
+            <li class="nav-item mx-4"><a href="https:facebook.com"><img src="./assets/facebook.svg" class="img-fluid"></a></li>
+            <li class="nav-item mx-4"><a href="https:twitter.com"><img src="./assets/twitter.svg" class="img-fluid"></a></li>
+            <li class="nav-item mx-4"><a href="https:youtube.com"><img src="./assets/vector.svg" class="img-fluid"></a></li>
+            <li class="nav-item mx-4"><a href="https:twitch.tv"><img src="./assets/twitch.svg" class="img-fluid"></a></li>
           </div>
           </div>
           </div>
@@ -209,10 +222,7 @@
         </div>
         </div>
       </footer>
-    
     </div>
-
-
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
   </body>
