--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
             <li><a href="https://www.linkedin.com/in/ahmadmuzakisyafii" class="nav-link px-2 link-light text-uppercase" id="font-open">About Me</a></li>
           </ul>
         <div class="nav col-3 justify-content-end">
-          <button type="button" class="btn btn-transparent text-light me-2 text-uppercase" id="font-open" style="font-size:0.937vw;">Sign Up</button>
-          <button type="button" class="btn btn-transparent text-light text-uppercase" id="font-open" style="font-size:0.937vw;">Login</button>
+          <button type="button" class="btn btn-transparent text-light me-2 text-uppercase fw-bold" id="font-open" style="font-size:0.937vw;">Sign Up</button>
+          <button type="button" class="btn btn-transparent text-light text-uppercase fw-bold" id="font-open" style="font-size:0.937vw;">Login</button>
         </div>
         </div>
         </header>
@@ -235,7 +235,7 @@
 
     <!--Email & Subscribe-->
             <div class="row g-0" style="margin-top: 50px;">
-              <div class="col-4">
+              <div class="col-6">
                 <div class="form-floating">
                   <input type="email" class="form-control bg-dark text-warning border-dark" id="floatingInputGrid"  placeholder="name@example.com" value="youremail@binar.co.id">
                   <label for="floatingInputGrid" class="text white" style="font-size: 0.937vw;">Your email address</label>
